# dynamic-island-dyland

./: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
gnome-extension/: launch.sh
gnome-extension/src/: extension.js  metadata.json
src/: App.tsx  constants.ts  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src-tauri/src/brightness/: mod.rs
src-tauri/src/brightness/linux/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/multimedia/: mod.rs
src-tauri/src/multimedia/linux/: mod.rs
src-tauri/src/multimedia/macos/: mod.rs
src-tauri/src/window/: mod.rs
src/dynamic-island/: BatteryActivity.tsx  BrightnessActivity.tsx  DynamicIsland.tsx  Gooey.tsx  MusicActivity.tsx  RadialProgress.tsx  VolumeActivity.tsx  activities.tsx  context.tsx  index.tsx  music-waves.css  radial-progress.css
src/dynamic-island/activities/: multimedia.tsx
src/dynamic-island/old/: context.tsx  index.tsx
src/dynamic-island/old/activities/: brightness.tsx
